# belgie

./: .coverage  .env.example  .gitignore  .harper-dictionary.txt  .oxfmtrc.json  .oxlintrc.json  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN_DOCUMENT_EXAMPLE.md  DESIGN_DOCUMENT_TEMPLATE.md  IMPLEMENTATION_TASKS.md  LICENSE  MVP_DESIGN.md  README.md  agents.md  build.rs  prek.toml  pyproject.toml  readme.md  test.py
.agents/skills/: building-pydantic-ai-agents  typer
.github/scripts/: set-release-version.py  validate-distributions.sh
.github/workflows/: ci.yml  lint.yml  prek.yml  publish.yml  test.yml
__tests__/: conftest.py  test_imports.py  test_integration.py  test_optional_extras.py  test_router.py  test_workspace_extras.py
__tests__/adapters/: test_alchemy.py
__tests__/alchemy/: __init__.py  conftest.py  test_adapter.py  test_auth_models.py  test_base.py  test_mixins.py  test_repository.py  test_settings.py  test_settings_integration.py  test_types.py
__tests__/auth/: conftest.py  test_imports.py  test_integration.py  test_router.py  test_scopes_integration.py
__tests__/core/: test_auth.py
__tests__/fixtures/: __init__.py  database.py  models.py
__tests__/session/: test_manager.py
__tests__/trace/: test_imports.py
design/: 000-design-example.md  000-design-template.md  001-email-workflows.md  001-user-scopes.md  002-feasibility-check.md  002-generic-oauth-providers.md  002-user-scopes-strenum.md  003-auth-event-hooks.md  003-auth-hooks.md  003-hooks-system.md  004-alchemy-module.md  004-sqlalchemy-mixins.md  005-database-settings.md  006-proto-package.md  006-uv-workspaces.md  007-auth-core-alchemy-package.md  008-optional-workspace-extras.md  009-alchemy-tests-relocation.md  010-belgie-oauth-auth-server.md  010-core-extraction.md  011-plugin-system.md  012-belgie-mcp-oauth-support.md  013-oauth-provider-parity.md
docs/: configuration.md  dependencies.md  models.md  quickstart.md  scopes.md
docs/design/: ab-testing-module.md  tracking-module.md
examples/__tests__/: conftest.py
examples/ai/langchain/: pyproject.toml  readme.md
examples/ai/langchain/src/langchain_example/: __main__.py
examples/alchemy/: __init__.py  auth_models.py
examples/auth/: .env.example  README.md  __init__.py  database.py  main.py  models.py  models_mixins.py  models_sqlite.py  scopes.py
examples/basic/environment/: pyproject.toml
examples/basic/simple/: pyproject.toml  readme.md
examples/basic_app/: .env.example  README.md  database.py  main.py
examples/commands/: pyproject.toml  readme.md
examples/environment/: pyproject.toml  readme.md
examples/inline-deps/: readme.md
examples/jsr-deps/: pyproject.toml  readme.md
examples/langchain/: pyproject.toml  readme.md
examples/mcp/: README.md  __init__.py  main.py  pyproject.toml  readme.md  vite.config.ts
examples/mcp/src/mcp_app/: __main__.py  build_widgets.py
examples/mcp/src/mcp_app/views/widgets/get-time/: widget.tsx
examples/mcp/src/mcp_example/views/widgets/get-time/: global.css  widget.tsx
examples/mcp/src/widgets/get-time/: index.tsx
examples/oauth/: README.md  __init__.py  main.py
examples/oauth_client_plugin/: README.md  main.py
examples/oauth_server_custom_pages/: README.md  __init__.py  main.py
examples/organization_team/: README.md  __init__.py  main.py  models.py
examples/pydantic-ai/: pyproject.toml  readme.md
examples/pydantic-ai/src/pydantic_ai_demo/: __main__.py
examples/pydantic-ai/src/pydantic_ai_example/: __main__.py
examples/pyproject/: pyproject.toml  readme.md
examples/pyproject-cli/: pyproject.toml
examples/simple/: readme.md
examples/stripe/: .env.example  README.md  main.py  models.py
examples/task-scripts/: pyproject.toml  readme.md
examples/task-scripts/src/task_scripts/: __init__.py  __main__.py
examples/ui/shadcn/: components.json  index.html  package-lock.json  package.json  pyproject.toml  readme.md  tsconfig.app.json  tsconfig.json  vite.config.ts
examples/ui/shadcn/src/: App.tsx
examples/ui/shadcn/src/components/ui/: button.tsx  card.tsx  field.tsx
examples/ui/shadcn/src/shadcn/: __main__.py
examples/ui/shadcn/src/shadcn/views/widgets/: tools.ts
examples/ui/shadcn/src/shadcn/views/widgets/get-time/: index.tsx  widget.tsx
examples/ui/shadcn/src/shadcn_app/: __main__.py
examples/ui/shadcn/src/widgets/get-time/: index.tsx
examples/ui/tanstack/: package.json  pyproject.toml  readme.md  tsconfig.json  vite.config.ts
examples/ui/tanstack/src/: styles.css
examples/ui/tanstack/src/routes/: __root.tsx  index.tsx
examples/ui/tanstack/src/tanstack/: __main__.py
examples/ui/tanstack/src/widgets/: tools.ts
examples/ui/tanstack/src/widgets/get-time/: widget.css  widget.tsx
napi/: generated_symbol_exports_list_windows.def
napi_exports/: windows.def
scripts/: belgie_bin.py
src/: exceptions.rs  lib.rs  synthetic_config.rs  task_runtime.rs  task_runtime_main.rs
src/belgie/: __init__.py  _awaitable.py  _child_process.py  _core.pyi  _pyproject.py  _task_runtime.py  alchemy.py  dependencies.py  errors.py  mcp.py  oauth.py  oauth_client.py  organization.py  proto.py  pydantic_ai.py  sso.py  stripe.py  tasks.py  team.py  test.py  testing.py
src/belgie/auth/: __init__.py  pyproject.toml
src/belgie/auth/adapters/: __init__.py  alchemy.py  connection.py  protocols.py
src/belgie/auth/adapters/alchemy/: __init__.py  mixins.py
src/belgie/auth/core/: auth.py  client.py  hooks.py  settings.py
src/belgie/auth/protocols/: __init__.py  adapter.py  models.py  provider.py
src/belgie/auth/providers/: __init__.py  google.py  protocols.py
src/belgie/auth/session/: __init__.py  manager.py
src/belgie/auth/utils/: __init__.py  crypto.py  scopes.py
src/binding/: blocking.rs  child_process.rs  coerce.rs  command.rs  environment.rs  mod.rs  normalize.rs  packages.rs  runner.rs  runtime.rs  script.rs  task.rs  task_options.rs  task_process.rs
src/brugge/: __init__.py
src/command/: mod.rs  source.rs
src/embed/: context.rs  graph.rs  init.rs  install.rs  memory.rs  mod.rs  runtime.rs  sys.rs  (+1 more)
(+361 files in other folders)
