[package]
name = "belgie"
version = "0.1.1"
edition = "2024"

[lib]
name = "_core"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
async-trait = "0.1.89"
aws-lc-rs = "1.16.3"
deno_ast = { version = "=0.53.2", features = ["transpiling"] }
deno_cache_dir = { git = "https://github.com/denoland/deno.git", tag = "v2.8.3", features = ["sync"] }
deno_config = { git = "https://github.com/denoland/deno.git", tag = "v2.8.3", features = ["sync", "workspace"] }
deno_core = { git = "https://github.com/denoland/deno.git", tag = "v2.8.3" }
deno_error = "0.7.1"
deno_graph = { version = "=0.108.4", default-features = false }
deno_lib = { git = "https://github.com/denoland/deno.git", tag = "v2.8.3" }
deno_lockfile = { git = "https://github.com/denoland/deno.git", tag = "v2.8.3" }
deno_media_type = { version = "=0.4.0", features = ["module_specifier"] }
deno_maybe_sync = { git = "https://github.com/denoland/deno.git", tag = "v2.8.3" }
deno_npm = { git = "https://github.com/denoland/deno.git", tag = "v2.8.3" }
deno_npm_cache = { git = "https://github.com/denoland/deno.git", tag = "v2.8.3" }
deno_npm_installer = { git = "https://github.com/denoland/deno.git", tag = "v2.8.3" }
deno_npmrc = { git = "https://github.com/denoland/deno.git", tag = "v2.8.3" }
deno_path_util = "=0.6.4"
deno_permissions = { git = "https://github.com/denoland/deno.git", tag = "v2.8.3" }
deno_resolver = { git = "https://github.com/denoland/deno.git", tag = "v2.8.3", features = ["sync", "graph", "deno_ast"] }
deno_runtime = { git = "https://github.com/denoland/deno.git", tag = "v2.8.3", default-features = false, features = ["transpile"] }
deno_semver = "=0.10.0"
deno_task_shell = "=0.33.0"
which = "7"
deno_terminal = { version = "=0.2.3", default-features = false }
ed448-goldilocks = "=0.14.0-pre.10"
elliptic-curve = "=0.14.0-rc.28"
futures = "0.3.31"
http = "1.0"
http-body-util = "0.1.2"
locked-tripwire = "=0.1.1"
log = "0.4.28"
node_resolver = { git = "https://github.com/denoland/deno.git", tag = "v2.8.3", features = ["sync"] }
once_cell = "1.21.3"
parking_lot = "0.12.4"
pkcs8 = "=0.11.0-rc.11"
pyo3 = { version = "0.28.2", features = ["abi3-py312"] }
pyo3-async-runtimes = { version = "0.28", features = ["attributes", "tokio-runtime"] }
rowan = "=0.15.15"
rustls = { version = "=0.23.40", default-features = false, features = ["aws_lc_rs", "std", "tls12"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
sys_traits = { version = "0.1.28", features = ["getrandom", "real", "libc", "winapi"] }
tempfile = "3"
tokio = { version = "1.47.1", features = ["rt", "sync", "macros", "rt-multi-thread"] }
toml_edit = "0.23"
url = "2.5.7"
yaml_parser = "=0.2.1"
