[project]
name = "belgie"
version = "0.1.1"
description = "A minimal, secure javascript runtime for python"
readme = "readme.md"
authors = [
    { name = "Matt LeMay", email = "mplemay@users.noreply.github.com" }
]
requires-python = ">=3.12,<3.15"
dependencies = []

[dependency-groups]
dev = [
    "anyio>=4",
    "prek>=0.4.4",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
    "rumdl>=0.2.7",
    "ty>=0.0.43",
    "uvloop>=0.22.1 ; sys_platform != 'win32'",
    "zizmor>=1.25.2",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "belgie._core"
python-packages = ["belgie"]
python-source = "src"
exclude = ["**/__tests__/**"]
features = ["extension-module"]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]
exclude-newer = "7 days"

[tool.ruff]
target-version = "py312"
line-length = 120
include = ["pyproject.toml"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",    # pydocstyle (i.e. ignore missing/malformed docstrings)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401", # imported but unused (common in __init__.py to re-export symbols)
    "T201", # print is intentional in CLI entry points
]
"**/__tests__/**/*" = [
    "ANN001",  # missing type annotation for function argument
    "ANN201",  # missing return type annotation for public function
    "ANN202",  # missing return type annotation for private function
    "B008",    # function call in argument defaults (required for FastAPI Depends)
    "F841",    # local variable assigned but never used
    "FAST002", # FastAPI dependency without Annotated
    "INP001",  # implicit namespace package (tests dir may not need __init__.py)
    "PLR0913", # too many arguments in function definition
    "PLR2004", # magic value used in comparison (fine in test cases)
    "S101",    # use of assert (tests typically use assert directly)
    "S106",    # possible hardcoded password (test secrets are fine)
    "SLF001",  # private member accessed
    "ANN401",  # mock helpers intentionally accept flexible kwargs
    "ARG001",  # fixtures used only for skip side effects
    "PT017",   # SystemExit assertions in CLI harness helpers
    "RUF043",  # pytest match patterns for CLI error messages
    "TC002",   # pytest imported at runtime in test modules
    "TC003",   # pathlib imported at runtime in test modules
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[tool.pytest.ini_options]
anyio_mode = "auto"
testpaths = ["src/belgie/__tests__"]
norecursedirs = ["target", "dist", "build", ".venv", "node_modules"]
markers = [
    "integration: marks tests that hit the database or external services",
]
filterwarnings = [
    "error",
]


[tool.rumdl]
line_length = 120

[tool.rumdl.MD013]
reflow = true
code_blocks = false
tables = false
