[project]
name = "mcp-example"
version = "0.1.0"
description = "MCP widget example for belgie"
readme = "readme.md"
authors = [
    { name = "Matt LeMay", email = "mplemay@users.noreply.github.com" }
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "belgie[mcp]",
    "uvicorn>=0.38,<1",
]

[project.scripts]
main = "mcp_example.__main__:main"

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv]
exclude-newer = "7 days"
exclude-newer-package = { belgie = false, mcp = false, mcp-types = false, uvicorn = false }

[tool.uv.sources]
belgie = { path = "../../", editable = true }
