[project]
name = "mcp-app"
version = "0.1.0"
description = "MCP widget example for belgie"
readme = "readme.md"
authors = [
    { name = "Matt LeMay", email = "mplemay@users.noreply.github.com" }
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "belgie[mcp]",
    "uvicorn>=0.38,<1",
]

[project.scripts]
main = "mcp_app.__main__:main"

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv]
exclude-newer = "7 days"
exclude-newer-package = { belgie = false, mcp = false, mcp-types = false, uvicorn = false }

[tool.uv.sources]
belgie = { path = "../../", editable = true }

[tool.belgie]
source = "src/mcp_app/views"

[tool.belgie.dependencies]
"@belgie/widget" = "file:../../../src/belgie/mcp/_widget_package"
"@modelcontextprotocol/ext-apps" = "npm:@modelcontextprotocol/ext-apps@latest"
"@modelcontextprotocol/sdk" = "npm:@modelcontextprotocol/sdk@latest"
"@vitejs/plugin-react" = "npm:@vitejs/plugin-react@^4"
react = "npm:react@^19"
"react-dom" = "npm:react-dom@^19"
"react-dom/client" = "npm:react-dom@^19/client"
vite = "npm:vite@6.1.0"
"vite-plugin-singlefile" = "npm:vite-plugin-singlefile@^2"
