[project]
name = "langchain-example"
version = "0.1.0"
description = "LangChain capability example for belgie"
readme = "readme.md"
authors = [
    { name = "Matt LeMay", email = "mplemay@users.noreply.github.com" }
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "belgie[langchain]",
    "langchain-openai>=0.3,<1",
]

[project.scripts]
main = "langchain_example.__main__:main"

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv]
exclude-newer = "7 days"
exclude-newer-package = { belgie = false, langchain = false }

[tool.uv.sources]
belgie = { path = "../../", editable = true }
