[project]
name = "simple"
version = "0.1.0"
description = "Minimal async Runtime example for belgie"
readme = "readme.md"
authors = [
    { name = "Matt LeMay", email = "mplemay@users.noreply.github.com" }
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "belgie",
]

[project.scripts]
main = "simple.__main__:main"

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv]
exclude-newer = "7 days"
exclude-newer-package = { belgie = false }

[tool.uv.sources]
belgie = { path = "../../", editable = true }
