[project]
name = "shadcn-app"
version = "0.1.0"
description = "MCP widget example for belgie using shadcn/ui"
readme = "readme.md"
authors = [
    { name = "Matt LeMay", email = "mplemay@users.noreply.github.com" }
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "belgie[mcp,cli]",
    "uvicorn>=0.38,<1",
]

[project.scripts]
main = "shadcn_app.__main__:main"

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv]
exclude-newer = "7 days"
exclude-newer-package = { belgie = false, mcp = false, mcp-types = false, uvicorn = false }

[tool.uv.sources]
belgie = { path = "../../../", editable = true }

[tool.belgie.dependencies]
"@base-ui/react" = "npm:@base-ui/react@^1.6.0"
"@belgie/mcp" = "file:../../../packages/mcp"
"@fontsource-variable/geist" = "npm:@fontsource-variable/geist@^5.2.9"
"@modelcontextprotocol/ext-apps" = "npm:@modelcontextprotocol/ext-apps@latest"
"@modelcontextprotocol/sdk" = "npm:@modelcontextprotocol/sdk@latest"
"@tailwindcss/vite" = "npm:@tailwindcss/vite@4.3.0"
"@vitejs/plugin-react" = "npm:@vitejs/plugin-react@^4"
"class-variance-authority" = "npm:class-variance-authority@^0.7.1"
clsx = "npm:clsx@^2.1.1"
"lucide-react" = "npm:lucide-react@^1.24.0"
react = "npm:react@^19"
"react-dom" = "npm:react-dom@^19"
"react-dom/client" = "npm:react-dom@^19/client"
shadcn = "npm:shadcn@^4.13.0"
"tailwind-merge" = "npm:tailwind-merge@^3.6.0"
tailwindcss = "npm:tailwindcss@4.3.0"
"tw-animate-css" = "npm:tw-animate-css@^1.4.0"
vite = "npm:vite@8.1.3"
